= Changelog
:link-repository: https://github.com/wmontwe/mobile-project-blueprint
:doctype: article
:toc: macro
:toclevels: 1
:toc-title:
:icons: font
:imagesdir: assets/images
ifdef::env-github[]
:warning-caption: :warning:
:caution-caption: :fire:
:important-caption: :exclamation:
:note-caption: :paperclip:
:tip-caption: :bulb:
endif::[]

All notable changes to this project will be documented in this file.

The format is based on http://keepachangelog.com/en/1.0.0/[Keep a Changelog]
and this project adheres to http://semver.org/spec/v2.0.0.html[Semantic Versioning].

[discrete]
==== Versions

toc::[]

== link:{link-repository}/releases/latest[Unreleased]

See link:{link-repository}/compare/v0.1.0...main[changeset]

=== Added

=== Changed

=== Removed

=== Fixed

=== Security

=== Bumped

- Android target API 31 -> 33
- Gradle 7.2 -> 7.5.1
- Android Gradle Plugin 7.1.0 -> 7.3.0
- Jetpack Compose 1.0.5 -> 1.1.1
- AndroidX AppCompat 1.4.2 -> 1.5.1
- AndroidX CoreKtx 1.7.0 -> 1.9.0
- AndroidX Activity Compose 1.4.0 -> 1.6.0
- Accompanist 0.20.3 -> 0.23.1

=== Deprecated

=== Migration

== link:{link-repository}/releases/tag/v1.0.0[1.0.0]

See link:{link-repository}/compare/v0.1.0...v1.0.0[changeset]

Experimental version 1.0.0. It is working but includes a lot of experiments and is not suitable as daily driver.

== link:{link-repository}/releases/tag/v0.1.0[0.1.0]

Initial release