@@ -1,8 +1,9 @@
-<?xml version='1.0' encoding='UTF-8'?>
+<?xml version="1.0" ?>
 <SmellBaseline>
-  <ManuallySuppressedIssues/>
+  <ManuallySuppressedIssues></ManuallySuppressedIssues>
   <CurrentIssues>
     <ID>ComplexCondition:Dangerfile.df.kts$!isFeatureBranch &amp;&amp; !isReleaseBranch &amp;&amp; !isDependabotBranch &amp;&amp; !isRenovateBranch</ID>
+    <ID>LongMethod:AndroidAppConfigurationPlugin.kt$AndroidAppConfigurationPlugin$private fun setupAndroidApplication(project: Project)</ID>
     <ID>LongMethod:XmlVectorParser.kt$@SuppressLint("RestrictedApi") internal fun AndroidVectorParser.parsePath( res: Resources, theme: Resources.Theme?, attrs: AttributeSet, builder: ImageVector.Builder )</ID>
     <ID>LongMethod:XmlVectorParser.kt$@SuppressWarnings("RestrictedApi") internal fun AndroidVectorParser.createVectorImageBuilder( res: Resources, theme: Resources.Theme?, attrs: AttributeSet ): ImageVector.Builder</ID>
     <ID>LongMethod:XmlVectorParser.kt$internal fun AndroidVectorParser.parseGroup( res: Resources, theme: Resources.Theme?, attrs: AttributeSet, builder: ImageVector.Builder )</ID>
